--- a/index.html
+++ b/index.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,  initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>CRUD AJAX</title>
 </head>
+
 <body>
-    <form action="" id="cadastro">
-        <label for="idUsuario">Id Usuário</label>
-        <input type="number" name="idUsuario" disabled>
+    <form action="salvar.php" id="cadastro" method="POST">
+        <label for="idUsuario">Id Usuário:</label>
+        <input placeholder="Id" type="number" name="idUsuario" disabled />
+        <label for="nome">Nome:</label>
+        <input type="text" name="nome" placeholder="Digite o nome do usuário">
+        <label for="email">Email:</label>
+        <input type="email" name="email" placeholder="digite o email do usuário">
+        <label for="senha">Senha:</label>
+        <input type="password" name="senha" placeholder="digite a senha">
+        <button type="submit">Salvar</button>
     </form>
 </body>
 <script>
-    $("#cadastro").css({"color":"red"})
+    $("#background").click(function (event) {
+        event.preventDefault();
+        $("label").css({ "color": "red" });
+    });
 </script>
+
 </html>
